--- a/front/FreemanBlog/package.json
+++ b/front/FreemanBlog/package.json
@@ -10,7 +10,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2"
+    "axios": "^0.21.1",
+    "element-ui": "^2.15.5",
+    "lodash": "^4.17.21",
+    "vue": "^2.5.2",
+    "vue-router": "^3.5.2",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
