--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,4 +2,23 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/freemanblog?useUnicode=true&characterEncoding=UTF-8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
-server.port = 8081
+server.port = 7999
+server.address= 0.0.0.0
+# ehcache ??
+# spring.cache.ehcache.config=classpath:config/ehcache-config.xml
+# redis????
+spring.cache.cache-names=c1,c2
+spring.cache.redis.time-to-live=1800s
+# reids ??
+spring.redis.database=0
+spring.redis.host=121.4.124.100
+spring.redis.port=6379
+spring.redis.password=1234567
+spring.redis.jedis.pool.max-active=8
+
+#spring.security.user.name=freeman
+#spring.security.user.password=123456
+#spring.security.user.roles=admin
+
+#??????
+spring.devtools.restart.additional-paths=src/main/resources/**
